<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openSL" />

    <Button
        android:id="@+id/btn_record_openSL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="20dp"
        android:onClick="startRecord"
        android:text="@string/btn_record_openSL"
        android:textSize="15sp"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_record_openSL"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/btn_record_openSL"
        android:height="50dp"
        android:onClick="startPlay"
        android:text="@string/btn_play"
        android:textSize="15sp"
        android:width="70dp" />

</RelativeLayout>