<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_normal_voice"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Number of seconds"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="startAlert"
            android:text="Start Counter" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/btn_old_voice"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/btn_record"
        android:textSize="15sp"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_normal_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/btn_record"
        android:layout_marginTop="24dp"
        android:height="50dp"
        android:text="@string/btn_normal_voice"
        android:textSize="15sp"
        android:width="70dp" />

    <Button
        android:id="@+id/btn_baby_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/btn_normal_voice"
        android:clickable="false"
        android:height="50dp"
        android:text="@string/btn_baby_voice"
        android:textSize="15sp"
        android:width="70dp" />

    <Button
        android:id="@+id/btn_old_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/btn_baby_voice"
        android:clickable="false"
        android:height="50dp"
        android:text="@string/btn_old_voice"
        android:textSize="15sp"
        android:width="70dp" />

</RelativeLayout>